# ngstents

./: .buildinfo  .gitignore  CMakeLists.txt  INDEX.html  README.md  StartPitching.html  __init__.py  genindex.html  index.html  objects.inv  pyproject.toml  rotatebump.py  rotatebumps.py  search.html  searchindex.js  setup.py  symbolicDG.cpp
.github/workflows/: build-nightly.yml  build-trefftz-nightly.yml  build-trefftz.yml  build.yml  build_pip.ps1  build_pip.sh  build_pip_mac.sh
_sources/: StartPitching.ipynb
cpp/: CMakeLists.txt  burgers.cpp  conservationlaw.hpp  export_conslaw.cpp  python_tents.cpp  symbolicDG.cpp  tconservationlaw_tp_impl.hpp  tents.cpp  tents.hpp
demo/: draw3dtent.py  draw3dvertex.py  rotatebump.py
demo/advection/: Advection_Periodic_Clipping.ipynb  advection2d.py  advection2d_periodic.py  advection2d_propagate.py
demo/burgers/: Burgers_Clipping.ipynb  burgers1d.py  burgers2d.py
demo/euler/: Euler_Clipping.ipynb  euler2d.py  mach3_windtunnel.py
demo/maxwell/: maxwell3d.py
demo/symbolic/: symbolic_advection2d.py  symbolic_burgers.py  symbolic_euler.py  symbolic_wave.py  symbolic_wave1d_interface.py  wave_penetrable_cylinder.py
demo/tents/: draw3dtent.py  draw3dvertex.py
demo/trefftz/: twave.py
demo/wave/: horn.py  wave2d.py  wave2d_timedepbc.py  wave3d.py
doc/: BurgersMTP.ipynb  StartPitching.ipynb
docs/: BurgersMTP.ipynb  INDEX.ipynb  StartPitching.ipynb  _config.yml  _toc.yml  conf.py  do  index.ipynb  index.rst  requirements.txt
docs/assets/css/: style.scss
purepy/: 3DTents.ipynb  Mesh2Triangles.ipynb  Mesh2Triangles_OptimalSeq.ipynb  dt_test.ipynb  erickson.py  erickson1tet.py  errplot.py  simp2.py  simplex.py  taupts.npz  tents1.py  test_erickson.py  trig.py  trig2qf.py
py/: __init__.py  _drawtents.py  _importtents.py  burgers.py  conservationlaw.py  ctau_experiments.py  mesh1d.py  tentinfo.py  tentslab.py
py/burgers/: burgers1d.py  burgers2d.py
py/conslaw/: __init__.py  burgers.py
py/utils/: __init__.py  _drawtents.py  _drawtents2d.py  mesh1d.py  slab2mesh.py
py/wave/: wave2d.py  wave3d.py
src/: CMakeLists.txt  advection.cpp  burgers.cpp  conservationlaw.hpp  euler.cpp  maxwell.cpp  paralleldepend.hpp  python_conslaw.cpp  python_tents.cpp  symbolic.cpp  symbolicDG.cpp  tconservationlaw_tp_impl.hpp  tents.cpp  tents.hpp  tentsolver.hpp  tentsolver_impl.hpp  timestepping.hpp  timestepping_impl.hpp  vis3d.cpp  vis3d.hpp  wave.cpp
src/trefftz/: CMakeLists.txt  __init__.py  python_trefftz.cpp  trefftzfespace.cpp  twavetents.cpp  twavetents.hpp
tentsngsgui/: README.md  setup.py
tentsngsgui/demo/: drawtents2d.py  drawtents3d.py
tentsngsgui/src/: tentplugin.py  tentscene.py
tentsngsgui/src/shaders/: tents.geom
tentsoglgui/src/: tentplugin.py
tentsoglgui/src/shaders/: tents.frag
tentsoglgui/test/: drawtents3d.py
tentswebgui/: README.md  build.py  build.sh  setup.py  tentswebgui_template.py
tentswebgui/demo/: Burgers2D.ipynb  Tents2D.ipynb  Tents2D_periodic.ipynb  drawtents2d.py  drawtents2d_larger.py
tentswebgui/js/: extension.js  package-lock.json  package.json  webpack.config.js
tentswebgui/js/src/: extension.ts  scene.ts  widget.ts
tentswebgui/py/: build.py  tentswebgui_template.py
tentswebgui/src/tentswebgui/: __init__.py
tentswebgui/tentswebgui/: __init__.py
tentswebgui/usage_examples/: Tents2D.ipynb  drawtents2d.py
tests/: test_burgers_2D.py  test_causal_tents.py  test_conslaw.py  test_tent_1D.py  test_tent_2D.py  test_tent_height_2D.py  test_tentlayers.py
